<resources>
	<!-- DENUNCIAS -->
	<string name="denuncia_publicada_em_label">Publicada em</string>
	<string name="denuncia_endereco_aproximado_abrv_label">Endereço aprox.</string>
	<string name="denuncia_situacao_label">Situação atual</string>	
	<!-- DEMAIS -->
    <string name="app_name">DengueApp</string>
    <string name="hello_world">Estamos desenvolvendo alguma coisa aqui. Enquanto isso: Hello World!</string>
    <string name="menu_settings">Preferências</string>
    <string name="title_activity_main">DengueApp</string>
    <string name="title_activity_sobre">SobreActivity</string>
    <string name="title_activity_minhas_denuncias">MinhasDenunciasActivity</string>
    <string name="title_activity_publicar_denuncia">PublicarDenunciaActivity</string>
    <string name="title_activity_dicas_prevencao">DicasPrevencaoActivity</string>
    <string name="imei_label">IMEI</string>
    <string name="email_do_usuario_associado_label">Usuário</string>
    <string name="telefone_label">Meu número de telefone</string>
    <string name="cod_ativacao_label">Código de ativação</string>
    <string name="publicar_denuncia">Publicar denúncia</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="denuncias">Denúncias</string>
    <string name="minhas_denuncias">Minhas denúncias</string>
    <string name="dicas_prevencao">Dicas de prevenção</string>
    <string name="sobre">Sobre a aplicação</string>
    <string name="voltar_inicial">Voltar para tela inicial</string>
    <string name="aluno_valor">Antonio Jorge Sapage da Canhota Junior</string>
    <string name="aluno_label">Aluno</string>
    <string name="aluno_email">antoniocanhota@id.uff.br</string>
    <string name="orientador_valor">Igor Monteiro Moraes</string>
    <string name="orientador_label">Orientador</string>
    <string name="sobre_paragrafo_1">Aplicação desenvolvida como parte do trabalho de conclusão de curso em bacharel em ciência da computação pela Universidade Federal Fluminense</string>
    <string name="versao_valor">1.0</string>
    <string name="versao_label">Versão</string>
    <string name="enviando_denuncia">Eviando denúncia</string>
    <string name="webservice_publicar_denuncia">http://dengue.herokuapp.com/webservices/denuncias/publicar</string>
    <string name="webserivce_listagem_denuncias">http://dengue.herokuapp.com/webservices/denuncias</string>
    <string name="confirmar_publicacao_de_denuncia">Confirmar e publicar denúncia</string>
    <!--
	chave para o mac: 0jThpxQvFWO9uJJsik5milTZWFAAACqh7usjHGA
	chave para o linux de casa: 0jThpxQvFWO96kWlACMapyrB1aVjKYYiMk13WQQ
    -->
    <string name="api_google_maps">0jThpxQvFWO9uJJsik5milTZWFAAACqh7usjHGA</string>
    <string name="title_activity_minhas_informacoes">Minhas informacoes</string>
    <string name="minhas_informacoes">Minhas informações</string>
    <string name="title_activity_show_denuncia">ShowDenunciaActivity</string>

</resources>