<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"
        android:text="@string/sobre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView2"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android1:text="@string/sobre_paragrafo_1"
        android1:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android1:id="@+id/textView5"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:text="@string/aluno_label"
        android1:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android1:id="@+id/textView3"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:text="@string/aluno_valor"
        android1:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android1:id="@+id/textView6"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:text="@string/aluno_email"
        android:paddingBottom="5dp"
        android1:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android1:id="@+id/textView4"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:text="@string/orientador_label"
        android1:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android1:id="@+id/textView9"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android1:text="@string/orientador_valor"
        android1:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android1:id="@+id/textView7"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:text="@string/versao_label"
        android1:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android1:id="@+id/textView8"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android1:text="@string/versao_valor"
        android1:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>